add method transfer
