# src/main/java/com/sgi/account/infrastructure/controller/BanckAccountController.java
@@ -3,9 +3,11 @@ package com.sgi.account.infrastructure.controller;
 import com.sgi.account.domain.ports.in.BankAccountService;
 import com.sgi.account.infrastructure.dto.AccountRequest;
 import com.sgi.account.infrastructure.dto.AccountResponse;
-import com.sgi.account.infrastructure.dto.BalanceResponse;
+import com.sgi.account.infrastructure.dto.DepositRequest;
 import com.sgi.account.infrastructure.dto.TransactionResponse;
-import com.sgi.account.infrastructure.dto.TransactionRequest;
+import com.sgi.account.infrastructure.dto.BalanceResponse;
+import com.sgi.account.infrastructure.dto.TransferRequest;
+import com.sgi.account.infrastructure.dto.WithdrawalRequest;
 import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -38,9 +40,9 @@ public class BanckAccountController implements V1Api {
     @Override
     public Mono<ResponseEntity<TransactionResponse>> depositToAccount(
             String idAccount,
-            Mono<TransactionRequest> transactionRequest,
+            Mono<DepositRequest> depositRequestMono,
             ServerWebExchange exchange) {
-        return bankAccountService.depositToAccount(idAccount, transactionRequest)
+        return bankAccountService.depositToAccount(idAccount, depositRequestMono)
                 .map(bankAccount -> ResponseEntity.ok().body(bankAccount));
     }
 
@@ -69,6 +71,15 @@ public class BanckAccountController implements V1Api {
     }
 
     @Override
+    public Mono<ResponseEntity<TransactionResponse>> transferToAccount(
+            String accountId,
+            Mono<TransferRequest> transferRequest,
+            ServerWebExchange exchange) {
+        return bankAccountService.transferFunds(accountId, transferRequest)
+                .map(transactionResponse -> ResponseEntity.ok().body(transactionResponse));
+    }
+
+    @Override
     public Mono<ResponseEntity<AccountResponse>> updateAccount(
             String idAccount,
             Mono<AccountRequest> accountRequest,
@@ -80,9 +91,9 @@ public class BanckAccountController implements V1Api {
     @Override
     public Mono<ResponseEntity<TransactionResponse>> withdrawFromAccount(
             String idAccount,
-            Mono<TransactionRequest> transactionRequest,
+            Mono<WithdrawalRequest> withdrawalRequestMono,
             ServerWebExchange exchange) {
-        return bankAccountService.withdrawFromAccount(idAccount, transactionRequest)
+        return bankAccountService.withdrawFromAccount(idAccount, withdrawalRequestMono)
                 .map(transactionResponse -> ResponseEntity.ok().body(transactionResponse));
     }
 }
